PLA-833 overflow for title fixed

--- a/extensions/wikia/Suggestions/css/Suggestions.scss
+++ b/extensions/wikia/Suggestions/css/Suggestions.scss
@@ -115,6 +115,7 @@ $image-width: 55px;
 		bottom: 0;
 		height: 70%;
 		margin: auto;
+		overflow: hidden;
 		position: absolute;
 		top: 0;
 	}
@@ -154,12 +155,10 @@ $image-width: 55px;
 		float: left;
 		font-size: 14px;
 		overflow: hidden;
-		text-overflow: ellipsis;
 		width: 295px;
 	}
 	.titleShort {
 		height: 16px;
-		white-space: nowrap;
 	}
 	.wraper {
 		float: right;
